# hwcert-jenkins-tools

./: .gitignore  README.md  add_private_ppa.py  get-snap-data.py  install_tools.sh  installer.sh  mailtool  mailtool.py  provision_checkbox.sh
.github/workflows/: test-submit-action.yaml  test_cert_tools.yaml  test_launcher.yaml  test_scriptlets.yaml  test_snapstore.yaml  test_test_executions_rerunner.yaml  test_toolbox.yaml  test_version_published.yaml  testflinger_submit.yaml  testflinger_submit_server_fail.yaml
cert-tools/: get-snapcraft-auth.py  get-snapcraft-token.py
cert-tools/launcher/: pyproject.toml
cert-tools/launcher/launcher/: configuration.py  stacker.py
cert-tools/launcher/tests/: test_stacker.py
cert-tools/snapcraft/: get-auth.py
cert-tools/snapstore/: pyproject.toml  tox.ini
cert-tools/snapstore/src/snapstore/: auth.py  cli.py  client.py  craft.py  info.py  snaps.py
cert-tools/snapstore/tests/: test_cli.py  test_client.py  test_craft.py  test_info.py  test_snaps.py
cert-tools/toolbox/: pyproject.toml
cert-tools/toolbox/src/toolbox/: __init__.py  cli.py  devices.py  snap_connections.py  snap_state.py
cert-tools/toolbox/src/toolbox/scripts/: devices.py  direct.py  retries.py  snaps.py
cert-tools/toolbox/tests/: test-snap-connections.py  test_snap_connections.py
checkbox-config/: stacked.conf  stacker.py
checkbox-config/test/resources/: environment.conf  head.conf  testplan.conf
github-runners/terraform/: backend.tf  main.tf  variables.tf
kernel-switcher/: README.md  switch_kernel.py  test_in_lxd_vm.py  test_switch_kernel.py
ppa-update-tools/: README.md  checkbox-ppas-for-canary.yaml  ppa_version_published.py  test_ppa_version_published.py
remote_install_checkbox_snaps/: README.md  pyproject.toml  remote_install_checkbox_snaps.py  test_remote_install_checkbox_snaps.py
scriptlets/: README.md  _get  _get_zapper  _put  _put_zapper  _run  _run_retry  _run_zapper  build_checkbox_launcher  check_for_checkbox_service  check_for_device_ip  check_for_packages  check_for_packages_complete  check_for_scenario_file  check_for_snap_change_id  check_for_snap_changes  check_for_ssh  check_for_zapper_ip  clean_machine  collect_artifacts  connect_checkbox_snaps  connect_snaps  enable_proposed  executable  fetch_manifest  gather_artifacts  git_get  git_get_shallow  import-all  install-checkbox-agent-source  install_checkbox_agent_source  install_checkbox_debs  install_checkbox_snaps  install_checkbox_snaps.sh  install_package_from_proposed  install_packages  install_snap  log  refresh_zapper_if_needed  retry  (+14 more)
scriptlets/defs/: add_to_path  check_for_device_ip  check_for_zapper_ip  executable  install_psmisc  log  scriptlet_path  ssh_options
scriptlets/sru-helpers/: fetch_manifest
scriptlets/test-executions-rerunner/: README.md  requirements.txt  test_executions_rerunner.py  test_processors.py  test_test_executions_rerunner.py  tox.ini  trigger.py
scriptlets/tests/: test_import_all.bats  test_put.bats  test_run.bats  test_wait_for_snap_complete.bats  test_wait_for_ssh.bats
snap-update-tools/: README.md  check_snap_availability.py  checkbox-snaps-for-canary.yaml  get_snap_store_version.py  get_version_store_snap.py  provision_checkbox.sh  snap_info_utility.py  snap_version_published.py  test_check_snap_availability.py  test_get_snap_store_version.py  test_get_version_store_snap.py  test_move_branch_by_version.py  test_snap_version_published.py  utils.py
submissions-tools/: .gitignore  README.md  download_submissions.py  get_failing_services.py
version-published/: README.md  checkbox-canary-packages.yaml  checkbox-canary-snaps.yaml  checkbox-canary.yaml  checkbox_version_published.py  checkout_to_version.py  get_snap_store_version.py  move_branch_by_version.py  snap_info_utility.py  snap_version_published.py  test_checkbox_version_published.py  test_checkout_to_version.py  test_move_branch_by_version.py  test_snap_info_utility.py  tox.ini
