[tool.poetry]
name = "remote-install-checkbox-snaps"
version = "0.1.0"
description = "Identify the correct snaps to install for checkbox and install them on a remote system with ssh access"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
remote-install-checkbox-snaps = "remote_install_checkbox_snaps:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
