[project]
name = "toolbox"
version = "0.3.0"
description = "Tools for accessing the snap store"
authors = [
    {name = "George Boukeas", email = "george.boukeas@canonical.com"},
    {name = "Paolo Gentili", email = "paolo.gentili@canonical.com"}
]
requires-python = ">=3.8"
dependencies = ["requests", "pymacaroons"]

[project.scripts]
get-auth = "snapstore.auth:cli"
snapstore-info = "snapstore.info:cli"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
