[project]
name = "snapstore"
version = "0.5"
description = "Tools for accessing the snap store"
authors = [
    {name = "George Boukeas", email = "george.boukeas@canonical.com"},
    {name = "Paolo Gentili", email = "paolo.gentili@canonical.com"}
]
requires-python = ">=3.10"
dependencies = ["craft-store"]

[project.scripts]
snap-info = "snapstore.cli:info_cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "tox"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
