[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "toolbox"
version = "1.0.0"
description = "Python scriptlets"
authors = [
    {name = "George Boukeas", email = "george.boukeas@canonical.com"},
]
requires-python = ">=3.8"
dependencies = [
    "fabric>=3.2.2",
    "snapstore @ ../snapstore"
]
[project.scripts]
snap_connections = "toolbox.snap_connections:main"
snap_state = "toolbox.snap_state:main"
_run = "toolbox.cli:run"
wait-for-ssh = "toolbox.cli:wait_for_ssh_entry_point"
wait_for_ssh = "toolbox.cli:wait_for_ssh_entry_point"
wait-for-snap-changes = "toolbox.cli:wait_for_snap_changes_entry_point"
wait_for_snap_changes = "toolbox.cli:wait_for_snap_changes_entry_point"

[project.optional-dependencies]
dev = ["pytest"]